<resources>
    <string name="app_name">Learn Remote</string>
    <string name="hint_login">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_button">Sign Up</string>
    <string name="register_button">Register</string>
    <string name="invite_code">Enter your Invite Code</string>
    <string name="url">http://harman89.pythonanywhere.com</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lections">Lectures</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_translate">Translate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
