<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lections"
            android:icon="@mipmap/ic_read"
            android:title="@string/menu_lections" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@mipmap/ic_done"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@mipmap/ic_bell"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_translate"
            android:icon="@mipmap/ic_globe"
            android:title="@string/menu_translate"
            />
    </group>
</menu>