<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_lections">

    <fragment
        android:id="@+id/nav_lections"
        android:name="com.example.learnremote.ui.home.LectionFragment"
        android:label="@string/menu_lections"
        tools:layout="@layout/fragment_lections" />

    <fragment
        android:id="@+id/nav_tasks"
        android:name="com.example.learnremote.ui.gallery.TaskFragment"
        android:label="@string/menu_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.learnremote.ui.slideshow.NotificationFragment"
        android:label= "@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/nav_translate"
        android:name="com.example.learnremote.translate"
        android:label="@string/menu_translate"
        tools:layout="@layout/fragment_translate"
        />
</navigation>